setting up api recyclerview and model

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/news_nav_graph" />
+        app:navGraph="@navigation/news_nav_graph"
+        tools:layout="@layout/items_article_preview" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
